--- a/style.css
+++ b/style.css
@@ -19,6 +19,36 @@ button:hover {
     background-color: #0056b3;
 }
 
+#recuerda{
+    color: #0056b3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#codigo {
+    color: #0056b3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid #0056b3;
+    padding: 10px 20px; 
+    border-radius: 20px; 
+    width: 200px; /* Ancho del recuadro */
+    height: 100px; /* Alto del recuadro */
+    font-size: 70px;
+}
+
+
+
+
 #invisible,
 #invisible2,
 #invisible3 {
