--- a/style.css
+++ b/style.css
@@ -1,53 +1,68 @@
-body {
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    box-sizing: border-box;
 }
 
+body {
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #ffffff
+} 
+
+.image {
+    text-align: center;
+    margin-right: 1000px;
+}
+
+.image img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto; 
+    max-width: 100%;
+    height: auto;
+    transition: transform 0.3s ease; 
+}
+
+.image img:hover {
+    transform: scale(1.1); 
+}
+
+
 button {
-    background-color: #007bff;
+    background-color: #d6d6d6;
     color: #fff;
     border: none;
     padding: 10px 20px;
     margin: 10px;
     cursor: pointer;
     border-radius: 20px;
+    transition: background-color 0.3s;
 }
 
 button:hover {
     background-color: #0056b3;
 }
 
-.recuerda{
-    color: #0056b3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#recuerda {
+    font-size: 48px; 
+    color: #0056b3; 
+    text-align: center;
+    padding: 20px;
 }
+
 #codigo {
-    color: #0056b3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 100px;
+    margin: 0 auto;
     border: 2px solid #0056b3;
-    padding: 10px 20px; 
-    border-radius: 20px; 
-    width: 200px; /* Ancho del recuadro */
-    height: 100px; /* Alto del recuadro */
-    font-size: 70px;
+    border-radius: 20px;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 36px; 
+    color: #0056b3;
 }
-
-
-
 
 #invisible,
 #invisible2,
@@ -91,9 +106,25 @@ input[type="submit"] {
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 input[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+.recuerda {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #333;
+    background-color: #f9f9f9;
+    padding: 15px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    text-align: center;
+    transition: transform 0.3s ease-in-out;
+}
+
+    
+
 
