--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ input[type="submit"]:hover {
     transition: transform 0.3s ease-in-out;
 }
 
+.volver{
+    text-align: center;
+}
+
     
 
 
